tests/snapshots/execution_spec__call-operator.md_test_11.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "newsWithPortArg": {
            "news": [
              {
                "id": 1
              },
              {
                "id": 2
              }
            ]
          }
        }
      ]
    }
  }
}
