tests/snapshots/execution_spec__call-operator.md_test_3.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "userGraphQLHeaders": {
            "name": "Leanne Graham"
          }
        }
      ]
    }
  }
}
