tests/snapshots/execution_spec__cors-access-headers.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "access-control-allow-headers": "*",
    "access-control-allow-methods": "POST, GET, OPTIONS",
    "access-control-allow-origin": "*"
  },
  "body": null
}
