tests/snapshots/execution_spec__cors-allow-cred-false.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
type Query {
  val: Int
}

schema {
  query: Query
}
