tests/snapshots/execution_spec__cors-allow-cred-true.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  val: Int
}

scalar Url

schema {
  query: Query
}
