tests/snapshots/execution_spec__cors-allow-cred-true.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "access-control-allow-credentials": "true",
    "access-control-allow-methods": "OPTIONS, POST, GET",
    "access-control-max-age": "23",
    "vary": "origin, access-control-request-method, access-control-request-headers"
  },
  "body": null
}
